--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,3 +24,10 @@ models:
       materialized: table
       staging:
         materialized: view
+
+vars:
+  SUPPLIER_DOMAIN: supplier_getyourguide.com
+  SUPPLIER: supplier
+  EVENT_UICLICK: UIClick
+  EVENT_SUPPLIERWEBUICLICK: SupplierWebUIClick
+  TARGET_SUPPLIERREGISTERACTION: SupplierRegisterAction
